--- a/combogen/translations/disclaimer-ru.html
+++ b/combogen/translations/disclaimer-ru.html
@@ -1,6 +1,6 @@
 Эта информация — результат исследований команды TripSit, и больше всего мы следили за тем, чтобы исключить некорректные данные. Тем не менее, какая-то информация может быть не на 100% достоверной.<br>
-<b>Эта таблица задумана как быстрая «шпаргалка» и вам всегда следует найти дополнительную информацию.</b> Когда вы собираетесь принять комбинацию из нескольких ПАВ, эта таблица — недостаточный источник информации. Используйте её на свой страх и риск, и, пожалуйста, следите за безопасностью.<br>
+<b>Эта таблица задумана как быстрая «шпаргалка». Найдите дополнительную информацию перед употреблением.</b> Когда вы собираетесь принять комбинацию из нескольких ПАВ, эта таблица — недостаточный источник информации. Используйте её на свой страх и риск, и, пожалуйста, следите за безопасностью.<br>
 Учтите, что эффект от смеси веществ может быть сильнее, чем от них по отдельности. Всегда начинайте с более низких доз каждого вещества.<br>
 Чтобы получить больше информации по конкретным веществам, зайдите на http://drugs.tripsit.me<br>
 <h3>Свежая информация о комбинациях, детали, объяснения и источники опубликованы на http://combo.tripsit.me</h3>
-<h3>Больше информации о конкретных веществах, включая дозировки, длительности эффектов и советы, опубликовано на http://drugs.tripsit.me/</h3>
+<h3>Больше информации о конкретных веществах, включая дозировки, длительности эффектов и советы — на http://drugs.tripsit.me/</h3>
