Disclaimer+Translations updated. Changed http links to https in all translations, replaced Mobile App with Android App in English, removed ambigious wordings in English and translated the word Chart within the German translations

--- a/combogen/translations/disclaimer-de.html
+++ b/combogen/translations/disclaimer-de.html
@@ -1,6 +1,6 @@
-Diese Kombinationen wurden vom TripSit Team so ausführlich wie möglich erforscht, und obwohl mit großer Obacht darauf geachtet wurde, keine Fehler zu enthalten, ist es möglich, dass einige Einträge niemals 100% akkurat sind.<br>
-<b>Dieser Chart ist lediglich als kurzes Nachschlagewerk gedacht und zusätzliche Recherchen sollten immer angestellt werden.</b> Es reicht nicht aus, nur diesen Chart zu berücksichtigen, wenn du über Mischkonsum nachdenkst.<br>
-Benutzung auf eigene Gefahr und pass bitte gut auf dich auf.<br>
+Diese Kombinationen wurden vom TripSit Team so ausführlich wie möglich erforscht, und obwohl mit großer Obacht darauf geachtet wurde, keine Fehler zu enthalten, ist es möglich, dass einige Einträge nicht 100% akkurat sind.<br>
+<b>Diese Tabelle ist lediglich als kurzes Nachschlagewerk gedacht und zusätzliche Recherchen sollten immer angestellt werden.</b> Es reicht nicht aus, nur diesen Chart zu berücksichtigen, wenn du über Mischkonsum nachdenkst.<br>
+Benutzung auf eigene Gefahr - pass bitte gut auf dich auf.<br>
 Halte beim Mischkonsum die gegenseitige Verstärkung im Hinterkopf und nimm kleinere Mengen von jeder Substanz.<br>
-Für mehr Informationen über bestimmte Substanzen, besuche uns auf http://drugs.tripsit.me.<br>
-<h3>Aktuelle Informationen, Details, Erklärungen und Quellen werden auf http://combo.tripsit.me veröffentlicht.</h3>
+Für mehr Informationen über bestimmte Substanzen, besuche uns auf https://drugs.tripsit.me.<br>
+<h3>Aktuelle Informationen, Details, Erklärungen und Quellen werden auf https://combo.tripsit.me veröffentlicht.</h3>
