--- a/combogen/translations/disclaimer-eo.html
+++ b/combogen/translations/disclaimer-eo.html
@@ -1,5 +1,5 @@
 Tiu informo esploris de la plej povo de la TripSit teamo, kaj la maksimuma klopodo faris, ne enhavi malveran aux erarigan informon. Kvankam, iuj informoj neniam eble 100% korekta.<br>
 <b>Tiu mapo signifas rapidan referencon, kaj aldona esploro devas cxiam fari.</b> Gxi ne estas suficxe nur konsulti cxi tiu mapo, kiam konsideratus kombinajxon. Uzu en via memrisko, kaj bonvolu provi esti sekuran.<br>
 Kiam miksados drogojn, memoru amplifon, kaj komencu kun malsupraj dozoj de cxiu drogo.<br>
-Por pli informo de specifaj drogoj, vizitu http://drugs.tripsit.me<br>
-<h3>Novmoda informo, detaloj, klarigoj kaj referencoj eldonos en http://combo.tripsit.me</h3>
+Por pli informo de specifaj drogoj, vizitu https://drugs.tripsit.me<br>
+<h3>Novmoda informo, detaloj, klarigoj kaj referencoj eldonos en https://combo.tripsit.me</h3>
