Minor typos, updating android QR code

--- a/combogen/translations/disclaimer-fr.html
+++ b/combogen/translations/disclaimer-fr.html
@@ -1,5 +1,5 @@
 Ces informations ont été recherchées par l'équipe TripSit aussi minutieusement que possible, et ses meilleurs efforts ont été faits pour ne pas inclure d'informations incorrectes ou trompeuses,<br> bien que certaines informations ne seront jamais 100% exactes.<br>
 <b>Ce tableau est un guide de référence rapide et des recherches supplémentaires doivent toujours être effectuées.</b> Il n'est pas suffisant de consulter ce tableau lorsque vous envisagez de prendre une combinaison.<br> Utilisez ces informations à vos risques et périls et restez aussi prudent que possible.<br>
 Lorsque vous mélangez des drogues gardez la potentialisation à l'esprit et commencez avec des doses réduites pour chaque substance.<br>
-Pour plus d'informations sur des drogues spécifiques, visitez https://drugs.tripsit.me/<br>
-<h3>Des informations à jour, détails, explications et références seront publiés sur https://combo.tripsit.me/</h3>
+Pour plus d'informations sur des drogues spécifiques, visitez https://drugs.tripsit.me<br>
+<h3>Des informations à jour, détails, explications et références seront publiés sur https://combo.tripsit.me</h3>
