--- a/combogen/translations/disclaimer-de.html
+++ b/combogen/translations/disclaimer-de.html
@@ -2,5 +2,5 @@ Diese Kombinationen wurden vom TripSit Team so ausführlich wie möglich erforsc
 <b>Diese Tabelle ist lediglich als kurzes Nachschlagewerk gedacht und zusätzliche Recherchen sollten immer angestellt werden.</b> Es reicht nicht aus, nur diesen Chart zu berücksichtigen, wenn du über Mischkonsum nachdenkst.<br>
 Benutzung auf eigene Gefahr - pass bitte gut auf dich auf.<br>
 Halte beim Mischkonsum die gegenseitige Verstärkung im Hinterkopf und nimm kleinere Mengen von jeder Substanz.<br>
-Für mehr Informationen über bestimmte Substanzen, besuche uns auf https://drugs.tripsit.me.<br>
-<h3>Aktuelle Informationen, Details, Erklärungen und Quellen werden auf https://combo.tripsit.me veröffentlicht.</h3>
+Für mehr Informationen über bestimmte Substanzen, besuche uns auf https://drugs.tripsit.me<br>
+<h3>Aktuelle Informationen, Details, Erklärungen und Quellen werden auf https://combo.tripsit.me veröffentlicht</h3>
