--- a/combogen/translations/disclaimer-en.html
+++ b/combogen/translations/disclaimer-en.html
@@ -2,4 +2,4 @@ This information has been researched to the best ability by the TripSit team, an
 <b>This chart is meant as a quick reference guide and additional research must always be done.</b> It is not sufficient to only consult this chart when considering a combination. Use at your own risk and please try to be safe.<br>
 When mixing drugs keep potentiation in mind and start with lower doses of each substance.<br>
 <h3>Up-to-date information on drug combinations, details, explanations, and references are published on https://combo.tripsit.me</h3>
-<h3>Further information about individual drugs including dosages, durations, and HR advice is available at https://drugs.tripsit.me/</h3>
+<h3>Further information about individual drugs including dosages, durations, and HR advice is available at https://drugs.tripsit.me</h3>
