implement Kiwi's redesign w/ small twists

--- a/combogen/translations/disclaimer-es.html
+++ b/combogen/translations/disclaimer-es.html
@@ -1,5 +1,10 @@
-Esta información ha sido verificada de la manera mas precisa posible dentro de las capacidades del equipo de Tripsit. Se ha hecho un gran esfuerzo para excluir toda información incorrecta o engañosa, pero no se puede garantizar que el contenido sea 100% correcto.<br>
-<b>El objetivo de esta tabla es ser una guía de referencia rápida, y siempre es necesario consultar otras fuentes para obtener información adicional.</b> No basta con solo consultar esta tabla para evaluar los riesgos de una combinación concreta. Úsala a tu propio riesgo.<br>
+<span id="squishy">
+Esta información ha sido verificada de la manera mas precisa posible dentro de las capacidades del equipo de TripSit.<br>
+Se ha hecho un gran esfuerzo para excluir toda información incorrecta o engañosa, pero no se puede garantizar que el contenido sea 100% correcto.<br>
+<b>El objetivo de esta tabla es ser una guía de referencia rápida, y siempre es necesario consultar otras fuentes para obtener información adicional.</b> 
+<br>No basta con solo consultar esta tabla para evaluar los riesgos de una combinación concreta. Úsala a tu propio riesgo.<br>
 Si mezclas diferentes sustancias, ten en cuenta posible potenciación mutua y empieza con dosis mas bajas de cada una.<br>
-Para mas información sobre sustancias concretas visita https://drugs.tripsit.me<br>
-<h3>Puedes encontrar información actualizada, detalles, explicaciones y referencias en https://combo.tripsit.me</h3>
+</span>
+
+<h4>Para mas información sobre sustancias concretas visita https://drugs.tripsit.me</h4>
+<h4>Puedes encontrar información actualizada, detalles, explicaciones y referencias en https://combo.tripsit.me</h4>
