--- a/combogen/translations/disclaimer-en.html
+++ b/combogen/translations/disclaimer-en.html
@@ -1,5 +1,13 @@
-This information has been researched to the best ability by the TripSit team, and whilst the greatest effort has been made to not include incorrect or misleading information, some details may not be 100% accurate.<br>
-<b>This chart is meant as a quick reference guide and additional research must always be done.</b> It is not sufficient to only consult this chart when considering a combination. Use at your own risk and please try to be safe.<br>
-When mixing drugs keep potentiation in mind and start with lower doses of each substance.<br>
-<h3>Up-to-date information on drug combinations, details, explanations, and references are published on https://combo.tripsit.me</h3>
-<h3>Further information about individual drugs including dosages, durations, and HR advice is available at https://drugs.tripsit.me</h3>
+<span id="squishy">
+    This information has been carefully curated by the TripSit team.
+    Whilst the greatest effort has been made to ensure it’s accuracy,
+    it will not guarantee your safety.<br>
+    Use at your own risk and consult other Harm Reduction resources.
+    <b>Consulting this chart is not sufficient to prepare you for combining drugs.</b>
+    <br>
+    When combined, drugs increase in potency and produce new effects, so lower doses are advised.
+</span>
+<h4>Up-to-date information on drug combinations, details, explanations, and references are published on
+    <a href="https://combo.tripsit.me">https://combo.tripsit.me</a></h4>
+<h4>Further information about individual drugs including dosages, durations, and HR advice is available
+    at <a href="https://drugs.tripsit.me">https://drugs.tripsit.me</a></h4>
