Implement changes discussed in PR #14

--- a/combogen/translations/disclaimer-cs.html
+++ b/combogen/translations/disclaimer-cs.html
@@ -1,5 +1,6 @@
-Tyto informace byly vyzkoumány TripSit týmem, a byla vydána nejvyšší snaha ve vynechání chybných nebo zavádějících informací, přesto některé informace nemusí být 100% přesné.<br>
-<b>Tato tabulka je myšlena jako rychlá referenční příručka a vždy musí být vykonán dodatečný výzkum.</b> Nahlídnutí na tuto tabulku není dostatečné, zvažujete-li kombinování drog. Používejte jen na vlastní nebezpečí a vždy se prosím snažte být opatrní.<br>
-Když mícháte drogy, mějte na paměti, že může nastat zesílení jejich účinků. V tomto ohledu vždy začínejte s nižšími dávkami.<br>
-Pro více informací o konkrétních drogách navštivte https://drugs.tripsit.me<br>
-<h3>Aktuální informace, podrobnosti, vysvětlení a reference budou uveřejněny na https://combo.tripsit.me</h3>
+<h4> Další informace, digitální verzi tohoto nástroje a nepřetržitou podporu živého chatu najdete na <a href="https://www.tripsit.me"> www.TripSit.Me</a></h4>
+    
+    Tuto tabulku sestavil TripSit s použitím nejlepších dostupných informací, ale není zaručeno, že bude přesná nebo spolehlivá.
+    <b> Neodkazujte na něj, dokud nevyzkoušíte své látky. </b> Nejprve použijte testovací sady. <b> Pokud užíváte léky, </b> zjistěte, která látka nebo třída je v tabulce představuje, a zapište si varování již nyní, abyste se později vyhnuli problémům.
+    
+    Život ohrožující komplikace jsou velmi reálnou možností, pokud jsou látky kombinovány bez rozdílu. <b> Když se o sebe nepostaráte vy, kdo? </b> Děkujeme, že jste v bezpečí.
