--- a/combogen/translations/disclaimer-de.html
+++ b/combogen/translations/disclaimer-de.html
@@ -1,6 +1,7 @@
-Diese Kombinationen wurden vom TripSit Team so ausführlich wie möglich erforscht, und obwohl mit großer Obacht darauf geachtet wurde, keine Fehler zu enthalten, ist es möglich, dass einige Einträge nicht 100% akkurat sind.<br>
-<b>Diese Tabelle ist lediglich als kurzes Nachschlagewerk gedacht und zusätzliche Recherchen sollten immer angestellt werden.</b> Es reicht nicht aus, nur diesen Chart zu berücksichtigen, wenn du über Mischkonsum nachdenkst.<br>
-Benutzung auf eigene Gefahr - pass bitte gut auf dich auf.<br>
-Halte beim Mischkonsum die gegenseitige Verstärkung im Hinterkopf und nimm kleinere Mengen von jeder Substanz.<br>
-Für mehr Informationen über bestimmte Substanzen, besuche uns auf https://drugs.tripsit.me<br>
-<h3>Aktuelle Informationen, Details, Erklärungen und Quellen werden auf https://combo.tripsit.me veröffentlicht</h3>
+<h4>Für weitere Informationen und Live-Hilfe besuchen Sie <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
+    
+Diese Tabelle wurde von TripSit unter Verwendung der besten verfügbaren Informationen zusammengestellt, <b>aber die Genauigkeit wird nicht garantiert.</b>
+Die Angaben hier sind nur gültig, wenn Sie die Substanzen haben, von denen Sie glauben, dass Sie sie haben. <b>Verwenden Sie zuerst ein Testkit.</b>
+Wenn Sie Medikamen
+te (SSRIs, MAOIs) einnehmen, lesen Sie jetzt alle Warnhinweise, um spätere Probleme zu vermeiden.
+<b>Sei sicher.</b>
