--- a/combogen/translations/disclaimer-en.html
+++ b/combogen/translations/disclaimer-en.html
@@ -1,13 +1,6 @@
-<span id="squishy">
-    This information has been carefully curated by the TripSit team.
-    Whilst the greatest effort has been made to ensure it’s accuracy,
-    it will not guarantee your safety.<br>
-    Use at your own risk and consult other Harm Reduction resources.
-    <b>Consulting this chart is not sufficient to prepare you for combining drugs.</b>
-    <br>
-    When combined, drugs increase in potency and produce new effects, so lower doses are advised.
-</span>
-<h4>Up-to-date information on drug combinations, details, explanations, and references are published on
-    <a href="https://combo.tripsit.me">https://combo.tripsit.me</a></h4>
-<h4>Further information about individual drugs including dosages, durations, and HR advice is available
-    at <a href="https://drugs.tripsit.me">https://drugs.tripsit.me</a></h4>
+<h4>For further information and live help, visit <a href="https://www.tripsit.me">www.TripSit.Me</a></h4>
+    
+This table was compiled by TripSit using the best information available, <b>but accuracy is not guaranteed.</b>
+The indications here are only valid if you have the substances you think you do. <b>Use a test kit first.</b>
+If you are on any medications (SSRIs, MAOIs), review all of the warnings now to avoid problems later.
+<b>Be safe out there.</b> If you don't take care of yourself, then who will?
