--- a/combogen/translations/disclaimer-it.html
+++ b/combogen/translations/disclaimer-it.html
@@ -1,5 +1,6 @@
-Queste informazioni sono state minuziosamente ricercate dal team di TripSit e, sebbene sia stato fatto il massimo sforzo per non includere informazioni errate o fuorvianti, alcuni dettagli potrebbero non essere accurati al 100%.<br>
-<b>Questo grafico è inteso come una guida di riferimento rapido e devono sempre essere eseguite ulteriori ricerche.</b> Non è sufficiente consultare solo questo grafico quando si considera una combinazione. Usalo a tuo rischio e cerca di proteggere te stesso.<br>
-Quando si mescolano i farmaci, tenere a mente il potenziamento e iniziare con dosi più basse di ciascuna sostanza.<br>
-<h3>Informazioni aggiornate sulle combinazioni di farmaci e droghe, dettagli, spiegazioni e riferimenti sono pubblicate su https://combo.tripsit.me</h3>
-<h3>Ulteriori informazioni sui singoli farmaci e sulle singole droghe, inclusi dosaggi e durate sono disponibili all'indirizzo https://drugs.tripsit.me</h3>
+<h4>Per ulteriori informazioni e assistenza in tempo reale, visitare <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
+    
+Questa tabella è stata compilata da TripSit utilizzando le migliori informazioni disponibili, <b>ma l'accuratezza non è garantita.</b>
+Le indicazioni qui sono valide solo se hai le sostanze che pensi di avere. <b>Utilizza prima un kit di test.</b>
+Se stai assumendo farmaci (SSRI, IMAO), rivedi subito tutte le avvertenze per evitare problemi in seguito.
+<b>Sii al sicuro là fuori.</b>
