--- a/combogen/translations/disclaimer-pl.html
+++ b/combogen/translations/disclaimer-pl.html
@@ -1,5 +1,6 @@
-Informacje te zostały zbadane przez zespół TripSit i chociaż dołożono wszelkich starań, aby nie zawierać niepoprawnych lub wprowadzających w błąd informacji, niektóre szczegóły mogą nie być w 100% dokładne.<br>
-<b>Ta tabela ma służyć jako skrócony przewodnik i zawsze należy przeprowadzić dodatkowe badania.</b> Przy rozważaniu kombinacji nie wystarczy jedynie zapoznać się z tą tabelą. Używaj na własne ryzyko i staraj się być bezpiecznym. <br>
-Podczas mieszania leków należy pamiętać o potencji i zaczynać od mniejszych dawek każdej substancji.<br>
-<h3>Aktualne informacje na temat kombinacji leków, szczegóły, wyjaśnienia i odniesienia są publikowane na https://combo.tripsit.me</h3>
-<h3>Więcej informacji na temat poszczególnych leków, w tym dawek, czasu trwania i porad HR, można znaleźć na stronie https://drugs.tripsit.me</h3>
+<h4>Aby uzyskać dodatkowe informacje i pomoc na żywo, odwiedź <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
+    
+Ta tabela została opracowana przez TripSit przy użyciu najlepszych dostępnych informacji, <b>ale dokładność nie jest gwarantowana.</b>
+Wskazania tutaj są ważne tylko wtedy, gdy masz substancje, o których myślisz, że masz. <b>Najpierw użyj zestawu testowego.</b>
+Jeśli przyjmujesz jakiekolwiek leki (SSRI, MAOI), przejrzyj teraz wszystkie ostrzeżenia, aby uniknąć problemów później.
+<b>Bądź bezpieczny</b>
