--- a/combogen/translations/disclaimer-fr.html
+++ b/combogen/translations/disclaimer-fr.html
@@ -1,5 +1,6 @@
-Ces informations ont été recherchées par l'équipe TripSit aussi minutieusement que possible, et ses meilleurs efforts ont été faits pour ne pas inclure d'informations incorrectes ou trompeuses,<br> bien que certaines informations ne seront jamais 100% exactes.<br>
-<b>Ce tableau est un guide de référence rapide et des recherches supplémentaires doivent toujours être effectuées.</b> Il n'est pas suffisant de consulter ce tableau lorsque vous envisagez de prendre une combinaison.<br> Utilisez ces informations à vos risques et périls et restez aussi prudent que possible.<br>
-Lorsque vous mélangez des drogues gardez la potentialisation à l'esprit et commencez avec des doses réduites pour chaque substance.<br>
-Pour plus d'informations sur des drogues spécifiques, visitez https://drugs.tripsit.me<br>
-<h3>Des informations à jour, détails, explications et références seront publiés sur https://combo.tripsit.me</h3>
+<h4>Pour plus d'informations et une aide en direct, visitez <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
+    
+Ce tableau a été compilé par TripSit en utilisant les meilleures informations disponibles, <b>mais l'exactitude n'est pas garantie.</b>
+Les indications ici ne sont valables que si vous avez les substances que vous pensez avoir. <b>Utilisez d'abord un kit de test.</b>
+Si vous prenez des médicaments (ISRS, IMAO), passez en revue tous les avertissements maintenant pour éviter des problèmes plus tard.
+<b>Soyez en sécurité là-bas.</b>
