--- a/combogen/translations/disclaimer-en.html
+++ b/combogen/translations/disclaimer-en.html
@@ -5,4 +5,4 @@ This table is only as valid as the labels on your drugs: <b>Always use a test ki
 Absence of a warning does not imply an absence of danger. <b>Further research is necessary.</b> 
 
 Do not rely solely on this chart. <b>While taking certain medications,</b> your risk is higher. 
-Do your homework now to avoid problems later. <b>Be safe out there.</b> No one is invincible.</div>
+Do your homework now to avoid problems later. <b>Be safe out there.</b> No one is invincible.
