Use a more personal form of address

--- a/combogen/translations/disclaimer-de.html
+++ b/combogen/translations/disclaimer-de.html
@@ -1,7 +1,6 @@
-<h4>Für weitere Informationen und Live-Hilfe besuchen Sie <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
+<h4>Für weitere Informationen und Live-Hilfe wirf einen Blick auf <a href="https://www.tripsit.me">www.TripSit.me</a></h4>
     
 Diese Tabelle wurde von TripSit unter Verwendung der besten verfügbaren Informationen zusammengestellt, <b>aber die Genauigkeit wird nicht garantiert.</b>
-Die Angaben hier sind nur gültig, wenn Sie die Substanzen haben, von denen Sie glauben, dass Sie sie haben. <b>Verwenden Sie zuerst ein Testkit.</b>
-Wenn Sie Medikamen
-te (SSRIs, MAOIs) einnehmen, lesen Sie jetzt alle Warnhinweise, um spätere Probleme zu vermeiden.
+Die Angaben hier sind nur gültig, wenn du auch genau die Substanz hast, von der du glaubst, sie zu haben. <b>Verwende bitte zuerst ein Testkit.</b>
+Wenn du Medikamente (v.a. SSRIs, MAOIs) einnimmst, lies in der Packungsbeilage nach, um Komplikationen mit der Substanz, die du einnehmen möchtest, auszuschließen.
 <b>Sei sicher.</b>
