--- a/combogen/translations/disclaimer-cs.html
+++ b/combogen/translations/disclaimer-cs.html
@@ -1,6 +1,10 @@
-<h4> Další informace, digitální verzi tohoto nástroje a nepřetržitou podporu živého chatu najdete na <a href="https://www.tripsit.me"> www.TripSit.Me</a></h4>
+<h4> Další informace a podporu formou chatu najdete na <a href="https://www.tripsit.me"> www.TripSit.Me</a></h4>
     
-    Tuto tabulku sestavil TripSit s použitím nejlepších dostupných informací, ale není zaručeno, že bude přesná nebo spolehlivá.
-    <b> Neodkazujte na něj, dokud nevyzkoušíte své látky. </b> Nejprve použijte testovací sady. <b> Pokud užíváte léky, </b> zjistěte, která látka nebo třída je v tabulce představuje, a zapište si varování již nyní, abyste se později vyhnuli problémům.
-    
-    Život ohrožující komplikace jsou velmi reálnou možností, pokud jsou látky kombinovány bez rozdílu. <b> Když se o sebe nepostaráte vy, kdo? </b> Děkujeme, že jste v bezpečí.
+Tuto tabulku sestavil TripSit s použitím nejlepších dostupných informací, ale není zaručeno, že bude přesná nebo spolehlivá.
+Jste si jistí, že máte skutečně látky, za které se vydávají? <b> Testujte si své látky! </b>
+Chybějící varování v tabulce neznamená absenci jakýchkoli rizik. <b> Zjišťujte si více informací o svých látkách. </b> 
+
+Nespoléhejte pouze na tuto tabulku. <b>Pokud berete nějaké léky, hrozí interakce a rizika jsou vyšší.</b>
+Zjistěte si možné interakce předem, abyste předešli budoucím problémům. 
+
+Buďte zodpovědní. Nikdo není nesmrtelný.
